gccida/g0/do_jump_by_parts_equality_rtx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10308:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10325:32: error: invalid suffix 'xmode' on integer constant
part = gen_reg_rtx( *(short *)0xmode); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10326:30: error: invalid suffix 'orce' on integer constant
v4 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10326:46: error: use of undeclared identifier 'machine_mode'
v4 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10326:6: error: use of undeclared identifier 'operand_sub'
v4 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10330:30: error: invalid suffix 'orce' on integer constant
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10330:46: error: use of undeclared identifier 'machine_mode'
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10330:6: error: use of undeclared identifier 'operand_sub'
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10331:33: error: invalid suffix 'xmode' on integer constant
part = expand_binop( *(short *)0xmode, optab_table[19], part, v5, part, 1, OPTAB_WIDEN); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10335:69: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( part, const_int_rtx[64], EQ, 1, *(short *)0xmode, 0LL, if_false_label, if_true_label); 
                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10346:17: error: invalid suffix 'xmode' on integer constant
v6 = *(short *)0xmode; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10348:30: error: invalid suffix 'orce' on integer constant
v8 = operand_sub*(short *)0xforce( op0, ia, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10348:47: error: use of undeclared identifier 'machine_mode'
v8 = operand_sub*(short *)0xforce( op0, ia, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/expr.c:10348:6: error: use of undeclared identifier 'operand_sub'
v8 = operand_sub*(short *)0xforce( op0, ia, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
     ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality_rtx/src/obj/expr.o] Error 1
